--- a/PyADAPT Examples/Skew-T General Demo.ipynb
+++ b/PyADAPT Examples/Skew-T General Demo.ipynb
@@ -111,10 +111,24 @@
     }
    ],
    "source": [
+    "# construct the basic axes\n",
     "fig, ax, bx = skewt.skewt_axes(ptop=200)\n",
-    "fig, ax = skewt.plot_profile(fig, ax, SKEWT.data['tdry'], SKEWT.data['pres'], label='tdry')\n",
-    "fig, ax = skewt.plot_profile(fig, ax, SKEWT.data['dp'], SKEWT.data['pres'], c='b', label='dewp')\n",
-    "fig, bx = skewt.plot_wind(fig, bx, mask=(SKEWT.data['pres'] >= 200),\n",
+    "\n",
+    "# plot the dry temperature\n",
+    "fig, ax = skewt.plot_profile(fig, ax, \n",
+    "                             SKEWT.data['tdry'], \n",
+    "                             SKEWT.data['pres'], \n",
+    "                             label='tdry')\n",
+    "\n",
+    "# plot the dewpoint temperature\n",
+    "fig, ax = skewt.plot_profile(fig, ax, \n",
+    "                             SKEWT.data['dp'], \n",
+    "                             SKEWT.data['pres'], \n",
+    "                             c='b', label='dewp')\n",
+    "\n",
+    "# add the winds for the altitude axis\n",
+    "fig, bx = skewt.plot_wind(fig, bx, \n",
+    "                          mask=(SKEWT.data['pres'] >= 200),\n",
     "                          u=SKEWT.data['u_wind'], \n",
     "                          v=SKEWT.data['v_wind'], \n",
     "                          a=SKEWT.data['alt'])"
