added one more print-out line

--- a/PyADAPT Examples/Skew-T General Demo.ipynb
+++ b/PyADAPT Examples/Skew-T General Demo.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +67,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[u'base_time', 'datetime', u'qc_tdry', u'qc_u_wind', u'alt', u'v_wind', u'qc_asc', u'lon', u'qc_dp', u'qc_wspd', u'wstat', u'u_wind', u'pres', u'qc_time', u'wspd', u'asc', u'qc_v_wind', u'lat', u'qc_deg', u'dp', u'rh', u'qc_pres', u'qc_rh', u'tdry', u'time', u'time_offset', u'deg']\n",
+      "['__doc__', '__init__', '__module__', 'comment', 'data', 'dimensions', 'file_datetime', 'keys', 'kind', 'long_name', 'missing_value', 'plot', 'site_id', 'units']\n",
+      "[u'base_time', u'time_offset', u'time', u'qc_time', u'pres', u'qc_pres', u'tdry', u'qc_tdry', u'dp', u'qc_dp', u'wspd', u'qc_wspd', u'deg', u'qc_deg', u'rh', u'qc_rh', u'u_wind', u'qc_u_wind', u'v_wind', u'qc_v_wind', u'wstat', u'asc', u'qc_asc', u'lat', u'lon', u'alt']\n",
+      "{u'base_time': u'seconds since 1970-1-1 0:00:00 0:00', u'qc_tdry': u'unitless', u'qc_u_wind': u'unitless', u'alt': u'meters above Mean Sea Level', u'v_wind': u'm/s', u'qc_asc': u'unitless', u'lon': u'degrees', u'qc_dp': u'unitless', u'qc_wspd': u'unitless', u'wstat': u'unitless', u'u_wind': u'm/s', u'pres': u'hPa', u'qc_time': u'unitless', u'wspd': u'm/s', u'asc': u'm/s', u'qc_v_wind': u'unitless', u'lat': u'degrees', u'qc_deg': u'unitless', u'dp': u'C', u'rh': u'%', u'qc_pres': u'unitless', u'qc_rh': u'unitless', u'tdry': u'C', u'time': u'seconds since 2009-06-30 00:00:00 0:00', u'time_offset': u'seconds since 2009-06-30 23:29:00 0:00', u'deg': u'deg'}\n",
       "[ 1014.11999512  1013.04998779  1011.73999023 ...,    26.89999962\n",
       "    26.86000061    26.80999947]\n",
       "[ 18.37000084  18.45000076  18.39999962 ..., -48.66999817 -48.63000107\n",
@@ -80,7 +82,9 @@
     "ncfile = os.path.join('data', 'grwsondewnpnM1.b1.20090630.232900.cdf')\n",
     "\n",
     "SKEWT = pyadapt.read(ncfile)\n",
-    "print(SKEWT.data.keys())\n",
+    "print(dir(SKEWT))\n",
+    "print(SKEWT.keys)\n",
+    "print(SKEWT.units)\n",
     "print(SKEWT.data['pres'])\n",
     "print(SKEWT.data['tdry'])"
    ]
