--- a/IABS-ALBEDO/coarsen_demo.ipynb
+++ b/IABS-ALBEDO/coarsen_demo.ipynb
@@ -94,7 +94,7 @@
     "    test_shape = tuple([shp[i]/factor for i in range(len(shp))])\n",
     "    \n",
     "    # if the two shapes are not equal, \n",
-    "    # the grid is not equally divisible.\n",
+    "    # the grid is not equally divisible by the scale factor\n",
     "    if new_shape != test_shape:\n",
     "        raise Exception(\"Dimensions are not evenly divisible by {}\"\n",
     "                        .format(factor))\n",
@@ -102,7 +102,7 @@
     "    # create our new array, adding a new dimension as the 0-th axis\n",
     "    new_array = np.ones((n_elements,)+new_shape) * np.nan\n",
     "    \n",
-    "    # check that new_array has the same total elements as grid\n",
+    "    # check that new_array has the same total elements as array\n",
     "    if not len(new_array.flatten())==len(a.flatten()):\n",
     "        raise Exception(\"Original len {} doesn't match reshaped len {}\".\n",
     "                       format(len(a.flatten()), \n",
@@ -115,10 +115,10 @@
     "            # insert into the new array every `factor-th` element\n",
     "            # starting at the specified vertical and horizontal index\n",
     "            new_array[counter,:] = a[i::factor, j::factor]\n",
-    "\n",
+    " \n",
     "            counter += 1\n",
-    "\n",
-    "    # two ways to calculate the mean when NANs are present:\n",
+    " \n",
+    "    # two ways to calculate the mean when NANs are present in array:\n",
     "    #   1. mean = NAN\n",
     "    #   2. mean = mean of finite values\n",
     "    if exclude_nan:\n",
