update the static broser plots and added a few more notebooks for the UHSAS data and showing the data availability

--- a/ENA/ENA Summary.ipynb
+++ b/ENA/ENA Summary.ipynb
@@ -168,24 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First Entry: 2013-10-01 15:00:00\n",
-      "Last Entry: 2015-05-20 23:59:00\n",
-      "\n",
-      "                     atmos_pressure  temp_mean  wdir_vec_mean  wspd_vec_mean\n",
-      "2013-10-01 15:00:00      100.010002  21.770000     289.899994          7.090\n",
-      "2013-10-01 15:01:00      100.019997  21.790001     291.200012          7.536\n",
-      "2013-10-01 15:02:00      100.019997  21.700001     299.000000          7.922\n",
-      "2013-10-01 15:03:00      100.010002  21.469999     307.399994          8.170\n",
-      "2013-10-01 15:04:00      100.019997  21.160000     306.000000          8.200\n"
+     "ename": "NameError",
+     "evalue": "name 'has_met_h5file' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-079fa33f96a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mhas_met_h5file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mMET\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtbx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfileIO\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHDF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmet_h5file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mdf_describe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMET\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32melif\u001b[0m \u001b[0mhas_met_directory\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mMETD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtbx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfileIO\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNetCDFFolder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmet_directory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'has_met_h5file' is not defined"
      ]
     }
    ],
@@ -385,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
